--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,4 @@ include("common-events")
 include("checkout-service")
 include("order-service")
 include("payment-service")
+include("payment-provider")
