--- a/payment-service/src/main/resources/application-local.yml
+++ b/payment-service/src/main/resources/application-local.yml
@@ -1,6 +1,11 @@
 server:
   port: 8083
 
+payment:
+  provider:
+    enabled: ${PAYMENT_PROVIDER_ENABLED:true}
+    baseUrl: ${PAYMENT_PROVIDER_BASE_URL:http://localhost:8090}
+
 spring:
 
   kafka:
