--- a/order-service/src/main/resources/application-local.yaml
+++ b/order-service/src/main/resources/application-local.yaml
@@ -16,12 +16,12 @@ spring:
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
 
   r2dbc:
-    url: r2dbc:mysql://localhost:3308/order_db
+    url: r2dbc:mysql://localhost:3308/order_db?serverZoneId=UTC
     username: root
     password: root
 
   flyway:
-    url: jdbc:mysql://localhost:3308/order_db
+    url: jdbc:mysql://localhost:3308/order_db?serverZoneId=UTC
     user: root
     password: root
     locations: classpath:db/migration
