--- a/payment-service/src/main/resources/application-local.yml
+++ b/payment-service/src/main/resources/application-local.yml
@@ -8,6 +8,11 @@ payment:
 
 spring:
 
+  jackson:
+    serialization:
+      write-dates-as-timestamps: false
+    time-zone: UTC
+
   kafka:
     bootstrap-servers: localhost:9092
     consumer:
@@ -22,12 +27,12 @@ spring:
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
 
   r2dbc:
-    url: r2dbc:mysql://localhost:3309/payment_db
+    url: r2dbc:mysql://localhost:3309/payment_db?serverZoneId=UTC
     username: root
     password: root
 
   flyway:
-    url: jdbc:mysql://localhost:3309/payment_db
+    url: jdbc:mysql://localhost:3309/payment_db?serverZoneId=UTC
     user: root
     password: root
     locations: classpath:db/migration
