--- a/settings.gradle
+++ b/settings.gradle
@@ -5,3 +5,4 @@ include("checkout-service")
 include("order-service")
 include("payment-service")
 include("payment-provider")
+include("auth-service")
