--- a/common-events/build.gradle
+++ b/common-events/build.gradle
@@ -1,8 +1,15 @@
 plugins {
     id "java-library"
+    id "io.spring.dependency-management" version "${springDependencyManagementVersion}"
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
+    }
 }
 
 dependencies {
-    implementation "com.fasterxml.jackson.core:jackson-databind:2.17.2"
-    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.2"
+    implementation "com.fasterxml.jackson.core:jackson-databind"
+    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
 }
