--- a/order-service/build.gradle
+++ b/order-service/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.5.9'
-    id 'io.spring.dependency-management' version '1.1.7'
+    id 'org.springframework.boot' version "${springBootVersion}"
+    id 'io.spring.dependency-management' version "${springDependencyManagementVersion}"
 }
 
 group = 'rs.master.o2c'
@@ -37,6 +37,7 @@ dependencies {
     implementation "io.projectreactor.kafka:reactor-kafka"
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
     implementation project(":common-events")
+    implementation project(":common-infra")
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.mysql:mysql-connector-j'
     runtimeOnly 'io.asyncer:r2dbc-mysql'
