--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = "o2c-kafka-platform"
 
 include("common-events")
+include("common-infra")
 include("checkout-service")
 include("order-service")
 include("payment-service")
